[gd_scene load_steps=11 format=3 uid="uid://de16yrwxesj6o"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_wpwt0"]
[ext_resource type="PackedScene" uid="uid://pufx1ujejf75" path="res://Scenes/enemy_spawner.tscn" id="2_al4gj"]
[ext_resource type="PackedScene" uid="uid://bgaio6m6yxgwr" path="res://Scenes/player.tscn" id="3_iflxp"]
[ext_resource type="PackedScene" uid="uid://cdvfuu1hpjn3b" path="res://Scenes/Enemies/bunny.tscn" id="4_05vr8"]
[ext_resource type="Texture2D" uid="uid://ci2ku4rauvga6" path="res://Assets/background.png" id="4_ejexm"]
[ext_resource type="PackedScene" uid="uid://dko7aglao6gjw" path="res://Scenes/main_ui.tscn" id="4_lousv"]
[ext_resource type="PackedScene" uid="uid://kd3nv0o7u06f" path="res://Scenes/tree.tscn" id="5_4iydv"]
[ext_resource type="PackedScene" uid="uid://cocp6168xqrcb" path="res://Scenes/death_menu.tscn" id="5_t8sce"]
[ext_resource type="PackedScene" uid="uid://c41g2o44k0bnb" path="res://Scenes/pause_menu.tscn" id="7_isgbb"]
[ext_resource type="PackedScene" uid="uid://y7v240wsbor3" path="res://Scenes/pond.tscn" id="10_leke0"]

[node name="Game" type="Node2D" groups=["game"]]
script = ExtResource("1_wpwt0")

[node name="EnemySpawner" parent="." instance=ExtResource("2_al4gj")]

[node name="Player" parent="." instance=ExtResource("3_iflxp")]

[node name="Parallax" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Parallax"]
motion_mirroring = Vector2(600, 600)

[node name="Grass" type="Sprite2D" parent="Parallax/ParallaxLayer"]
texture_filter = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_ejexm")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainUI" parent="CanvasLayer" instance=ExtResource("4_lousv")]
offset_left = 1.0
offset_right = 1.0

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("7_isgbb")]

[node name="DeathMenu" parent="CanvasLayer" instance=ExtResource("5_t8sce")]

[node name="Enemy" parent="." instance=ExtResource("4_05vr8")]
position = Vector2(218, 32)

[node name="Tree" parent="." instance=ExtResource("5_4iydv")]
position = Vector2(-72, -62)

[node name="Pond" parent="." instance=ExtResource("10_leke0")]
z_index = -1
position = Vector2(105, 62)

[node name="WaterTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="player_death" from="Player" to="." method="_on_player_player_death"]
[connection signal="timeout" from="WaterTimer" to="." method="_on_water_timer_timeout"]
